--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
-  "name": "form-test",
+  "homepage": "https://ArturW1998.github.io/tabs-form",
+  "name": "tabs-form",
   "version": "0.1.0",
   "private": true,
+  "description": "Simple React Tabs Form Application",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ArturW1998/tabs-form"
+  },
+  "keywords": [
+    "react",
+    "reactjs"
+  ],
+  "author": "Artur Voloshyn (https://github.com/arturw1998)",
+  "license": "MIT",
   "dependencies": {
+    "@testing-library/jest-dom": "5.15.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
     "bootstrap": "5.0.1",
     "classnames": "2.3.1",
     "prop-types": "15.6.2",
     "react": "17.0.2",
-    "react-dom": "16.14.0",
+    "react-dom": "17.0.2",
     "react-images-uploading": "3.1.3",
     "react-scripts": "4.0.3",
     "reactstrap": "8.9.0",
-    "web-vitals": "1.0.1"
+    "web-vitals": "0.2.4"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.1.0",
@@ -29,6 +44,7 @@
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "1.7.0",
     "eslint-plugin-standard": "4.0.1",
+    "gh-pages": "3.2.3",
     "husky": "3.1.0",
     "lint-staged": "9.5.0",
     "prettier": "1.19.1",
@@ -50,7 +66,12 @@
     "lint:styles:fix": "npm run lint:styles --fix",
     "format": "prettier \"src/**/*.{js,jsx,yml,yaml,ts,tsx,md,graphql,mdx}\" --write",
     "format:styles": "prettier \"src/**/*.css\" --parser css --write",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "test:update": "npm test -u",
+    "test:watch": "npm test --watchAll --verbose",
+    "test:coverage": "npm test --bail --coverage --watchAll",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
